# Note-App

./: README.md  docker-compose.prod.yml  docker-compose.yml
ai-service/: .env.example  .gitignore  Dockerfile  requirements.txt
ai-service/src/: main.py
ai-service/src/config/: settings.py
ai-service/src/models/: schema.py
ai-service/src/routers/: summarize.py
ai-service/src/services/: summarize.py
api/: .dockerignore  .env.example  .gitignore  Dockerfile  package.json
api/prisma/: schema.prisma
api/src/: app.ts  index.ts
api/src/controllers/: note.controller.ts
api/src/routes/: note.routes.ts
api/src/services/: note.service.ts
api/src/types/: note.d.ts
backend/: package.json
backend/prisma/: schema.prisma
backend/src/config/: config.ts
backend/src/controllers/: note.controller.ts
backend/src/middlewares/: clerkAuth.ts  ensureUserExists.middleware.ts
backend/src/routes/: note.routes.ts
mobile/: .gitignore  app.json  package-lock.json  package.json
mobile/src/app/: _layout.tsx
mobile/src/app/(auth)/: sign-in.tsx  sign-up.tsx
mobile/src/app/(home)/: index.tsx
mobile/src/app/note/: [id].tsx  create.tsx  edit.tsx
mobile/src/lib/: api.ts
mobile/src/types/: note.d.ts
python-server/: .dockerignore  main.py  pyproject.toml  requirements.txt
python-server/src/routers/: summarize.py
server/: package.json
server/prisma/: schema.prisma
server/prisma/migrations/20251104170808_init/: migration.sql
server/prisma/migrations/20251106151216_init/: migration.sql
server/src/: app.ts
